--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>BUCK-CONSTRUCTION</h1>
+								<h1>COMING SOON!<br> BUCK'S-CONSTRUCTION</h1>
 								<p><!--[-->All YOU NEED TO KNOW ABOUT BUCK CONSTRUCTION<!--]--><br />
 								<!--[--><!-- Also other information about Codey Cherry.. --><!--]--></p>
 							</div>
